2006-09-12  Per Bothner  <per@bothner.com>

	* URI_utils.java (resolve):  Make sure invalid URI characters are
	quoted before calling URI.resolve.

2006-09-11  Per Bothner  <per@bothner.com>

	* SourceError.java: Remove unused import.
	* Lexer.java: Remove unused local variable.

2006-09-06  Per Bothner  <per@bothner.com>

	* Char.java: Remove unused private constructor.
	* SourceMessages.java (error): Remove unused local 'compilation'.
	* Optiona.java (pushOptionValues): Remove unused local 'oldValue'.

2006-08-26  Per Bothner  <per@bothner.com>

	* PrettyWriter.java: Minor debugging+comment improvements.

2006-08-08  Per Bothner  <per@bothner.com>

	* URI_utils.java (lastModified): New static method.

2006-05-25  Per Bothner  <per@bothner.com>

	* SourceMessages.java (seenErrorsOrWarnings): New method.

2006-04-10  Dean Ferreyra <dferreyra@igc.org>
            Per Bothner  <per@bothner.com>

	* SourceError.java (fakeException): New field.
	(toString): If fakeException is non-null include stack trace in result.
	* SourceMessages.java (debugStackTraceOnWarning,
	debugStackTraceOnError): New static globals.
	(error): Make fakeException if requested.

2006-02-26  Per Bothner  <per@bothner.com>

	* SourceError.java (code): New field.
	(toString): If code field is non-null, display it.
	* SourceMessages.java (error(char,String,String)): New method.

2006-01-12  Per Bothner  <per@bothner.com>

	* URI_utils.java (toFileOrURL): Fix some problems with File handling.

2006-01-10  Per Bothner  <per@bothner.com>

	* URI_utils.java (FiletoURL, toURL): New methods.
	(FiletoURI): Use fileToURL.

2006-01-07  Per Bothner  <per@bothner.com>

	* URI_utils.java (makeClassResourceURI): New method.
	(resourceURL): Largely rewrite for modified "class-resource:/"
	uri-scheme handling.
	(CLASS_RESOURCE_URI_SCHEME): Rename to CLASS_RESOURCE_URI_PREFIX
	and add '/'.
	(CLASS_RESOURCE_URI_SCHEME_LENGTH): Likewise increment and
	rename to CLASS_RESOURCE_URI_PREFIX_LENGTH.